prepare code for java 1.8